[package]
name = "supersdf"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[dependencies]
kiss3d = "0.35.1"
image = "0.24"
rand = "0.8.5"
noise = "0.8.2"
cgmath = "0.18.0"

[patch.crates-io]
kiss3d = { git = "https://github.com/rolfrm/kiss3d.git", branch = "master" }