[package]
name = "supersdf"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[dependencies]
glfw = "0.55"
gl = "0.14"
image = "0.24"
rand = "0.8.5"
noise = "0.8.2"
nalgebra = "0.22.1"
bitflags = "2.4.0"
