[package]
name = "supersdf"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[features]
default = ["native"]
native = ["glfw", "gl"]

[dependencies]
glfw = { version = "0.55", optional = true }
gl = { version = "0.14", optional = true }
image = "0.24"
rand = "0.8.5"
nalgebra = "0.22.1"
bitflags = "2.4.0"
